argocd/applications/core/op-connect/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: op-connect-route
  namespace: op-connect
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik

  hostnames:
    - op-connect.kube.squatch.dev

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: op-connect
          port: 8080
